# qslweb

./: .gitignore  CLAUDE.md  Makefile  README.md  env.example  manage.py  pyproject.toml
.github/workflows/: ci.yml
eqsl/: admin.py  apps.py  default_render.py  models.py  render.py  services.py  urls.py  views.py
eqsl/management/commands/: import_qsos.py
eqsl/migrations/: 0001_initial.py  0002_qso.py  0003_emailqsl.py  0004_cardtemplate_html_template_cardtemplate_language.py  0005_cardtemplate_python_render_code.py  0006_alter_cardtemplate_python_render_code.py  0007_add_rendertemplate_model.py  0008_populate_render_templates.py
eqsl/services/: __init__.py  qrz.py  qrzlogbook.py
eqsl/templates/eqsl/: base.html  qso_detail.html  qso_list.html
examples/: README.md  qrz_lookup.py
qslweb/: asgi.py  settings.py  urls.py  wsgi.py
tests/: conftest.py  test_admin.py  test_card_template.py  test_default_render.py  test_emailqsl.py  test_qrz_import.py  test_qrz_xml.py  test_qso.py  test_render.py  test_views.py
tests/fixtures/: __init__.py  qrz_responses.py
